--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <nav>
         
-        <h1><img style="margin-left: -18px;" alt="{{ site.title | default: site.github.repository_name }}" src="/assets/images/logo.svg" /></h1>
+        <h1><img style="margin-left: -18px;" alt="{{ site.title | default: site.github.repository_name }}" src="{{ '/assets/images/logo.svg' | relative_url}}" /></h1>
         <p>Technical Guide</p>
         {% include nav.html %}
       </nav>
