--- a/_layouts/open-api.html
+++ b/_layouts/open-api.html
@@ -5,7 +5,7 @@
     <!-- needed for adaptive design -->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="{{'favicon.ico' | prepend: site.github.url }}">
 
     <!--
     ReDoc doesn't change outer page styles
