--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -106,69 +106,17 @@ $buttonGreyBottom: #646464;
   }
 }
 
-@media print, screen and (max-width: 960px) {
-
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-
-  nav, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-
-  nav {
-    padding-right:320px;
-  }
-
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-}
-
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-
-  nav {
-    padding:0;
-  }
-
-  pre, code {
-    word-wrap:normal;
-  }
-}
-
-@media print, screen and (max-width: 480px) {
-  body {
-    padding:15px;
-  }
-}
-
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
-  }
+nav {
+  width: 270px;
+  float:left;
+  -webkit-font-smoothing:subpixel-antialiased;
 }
 
 body {  
   @include font-regular;
 }
 
-nav {
-  width: 270px;
-  float:left;
-  position:fixed;
-  -webkit-font-smoothing:subpixel-antialiased;
-}
+
 
 .nav-docs {
   color: $darkColor;
@@ -242,13 +190,6 @@ nav {
     }
 
     > ul {
-      @include bp-medium {
-        columns: 2
-      }
-
-      @include bp-small {
-        columns: 1;
-      }
 
       li {
         margin: 0;
@@ -260,5 +201,62 @@ nav {
       }
     }
   }
+}
 
+@media print, screen and (max-width: 960px) {
+
+  div.wrapper {
+    width:auto;
+    margin:0;
+  }
+
+  nav, section, footer {
+    float:none;
+    position:static;
+    width:auto;
+  }
+
+  nav {
+    padding-right:320px;
+    width: auto;
+  }
+
+  section {
+    border: none;
+    padding:20px 0;
+    margin:0 0 20px;
+  }
+
+  .nav-docs {
+    margin-right: 25px;
+  }
+}
+
+@media print, screen and (max-width: 720px) {
+  body {
+    word-wrap:break-word;
+  }
+
+  nav {
+    padding:0;
+    display: inline;
+  }
+
+  pre, code {
+    word-wrap:normal;
+  }
+}
+
+@media print, screen and (max-width: 480px) {
+  body {
+    padding:15px;
+  }
+}
+
+@media print {
+  body {
+    padding:0.4in;
+    font-size:12pt;
+    color:#444;
+  }
 }
