adds blog to nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,6 +20,16 @@
         {% endfor %}
       </ul>
     </div>
-  {% endfor %}
+	{% endfor %}
 
+	<div class="nav-docs-section">
+		<h3><a href="#">Blog</a></h3>
+		<ul>
+			{% for post in site.posts %}
+				<li>
+					<a href="{{ post.url }}">{{ post.title }}</a>
+				</li>
+			{% endfor %}
+		</ul>
+	</div>
 </div>
