--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
 		<ul>
 			{% for post in site.posts %}
 				<li>
-					<a href="{{ post.url }}">{{ post.title }}</a>
+					<a href="{{ post.url | prepend: site.github.url }}">{{ post.title }}</a>
 				</li>
 			{% endfor %}
 		</ul>
