--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -203,6 +203,13 @@ body {
   }
 }
 
+.nav-post {
+	margin-bottom: 25px;
+	> small {
+		color: #C5C5C5;
+	}
+}
+
 @media print, screen and (max-width: 960px) {
 
   div.wrapper {
