--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -116,8 +116,6 @@ body {
   @include font-regular;
 }
 
-
-
 .nav-docs {
   color: $darkColor;
   font-size: 14px;
@@ -205,9 +203,10 @@ body {
 
 .nav-post {
 	margin-bottom: 25px;
-	> small {
-		color: #C5C5C5;
-	}
+}
+
+.nav-post small {
+	color: #C5C5C5;
 }
 
 @media print, screen and (max-width: 960px) {
