--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,20 @@
-<!doctype html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
-    <link rel="shortcut icon" type="image/x-icon" href="{{'/favicon.ico' | prepend: site.github.url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
+
   <body>
-    <div class="wrapper">
-      <nav>
-        
-        <h1><img style="margin-left: -18px;" alt="{{ site.title | default: site.github.repository_name }}" src="{{ '/assets/images/logo.svg' | relative_url}}" /></h1>
-        <p>Technical Guide</p>
-        {% include nav.html %}
-      </nav>
-      <section>
 
-      {{ content }}
-
-      </section>
-
-      <footer>
-      </footer>
-    </div>
-    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        <nav>
+          
+          <h1><img style="margin-left: -18px;" alt="{{ site.title | default: site.github.repository_name }}" src="{{ '/assets/images/logo.svg' | relative_url}}" /></h1>
+          <p>Technical Guide</p>
+          {% include nav.html %}
+        </nav>
+      </div>
+    </main>
 
 
-  {% if site.google_analytics %}
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
-    </script>
-  {% endif %}
   </body>
-</html>
+  </html>
