open-api2 url pass

--- a/_layouts/open-api2.html
+++ b/_layouts/open-api2.html
@@ -33,8 +33,9 @@
 <script>
   //const apiUrl = "http://localhost/open-api/petstore.json"
   //const apiUrl = "http://localhost/open-api/gatekeeper.json"
-  const apiUrl = "https://rest.trackmatic.co.za/api/v2/gatekeeper/docs/latest"
-
+  //const apiUrl = "https://rest.trackmatic.co.za/api/v2/gatekeeper/docs/latest"
+  const apiUrl = "{{page.open-api-url}}"
+  
   init()
 
   function loadDoc() {
