--- a/_layouts/open-api.html
+++ b/_layouts/open-api.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <redoc suppress-warnings spec-url="{{page.open-api-url}}"></redoc>
+    <redoc suppress-warnings lazy-rendering spec-url="{{page.open-api-url}}"></redoc>
     <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
   </body>
 </html>
