--- a/_layouts/open-api.html
+++ b/_layouts/open-api.html
@@ -19,6 +19,6 @@
   </head>
   <body>
     <redoc suppress-warnings lazy-rendering spec-url="{{page.open-api-url}}"></redoc>
-    <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
+    <script src="https://redocpro-cdn.redoc.ly/v1.0.0-beta.18/redocpro-standalone.min.js"> </script>
   </body>
 </html>
