--- a/_layouts/open-api.html
+++ b/_layouts/open-api.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <redoc suppress-warnings lazy-rendering spec-url="{{page.open-api-url}}"></redoc>
-    <!--<script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>-->
-    <script src="https://cdn.jsdelivr.net/npm/redoc@2.0.0-alpha.17/bundles/redoc.standalone.js"> </script>    
+     <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/redoc@2.0.0-alpha.17/bundles/redoc.standalone.js"> </script>    -->
   </body>
 </html>
