--- a/_layouts/open-api2.html
+++ b/_layouts/open-api2.html
@@ -41,8 +41,7 @@
 
   function init() {
     loadJSON(function (response) {
-      // Parse JSON string into object
-      console.log(response);
+      // Parse JSON string into object     
       var actual_JSON = JSON.parse(response);
       console.log("The JSON:")
       console.log(actual_JSON)
@@ -54,7 +53,7 @@
   function loadJSON(callback) {
     var xobj = new XMLHttpRequest();
     xobj.overrideMimeType("application/json");
-    xobj.open('GET', apiUrl, true); // Replace 'my_data' with the path to your file
+    xobj.open('GET', apiUrl, false); // Replace 'my_data' with the path to your file
     xobj.onreadystatechange = function () {
       if (xobj.readyState == 4 && xobj.status == "200") {
         // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
