--- a/_layouts/open-api2.html
+++ b/_layouts/open-api2.html
@@ -57,6 +57,7 @@
     xobj.onreadystatechange = function () {
       if (xobj.readyState == 4 && xobj.status == "200") {
         // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
+        console.log(xobj);
         callback(xobj.responseText);
       }
     };
