--- a/_layouts/open-api2.html
+++ b/_layouts/open-api2.html
@@ -53,12 +53,14 @@
   function loadJSON(callback) {
     var xobj = new XMLHttpRequest();
     xobj.overrideMimeType("application/json");
-    xobj.open('GET', apiUrl, false); // Replace 'my_data' with the path to your file
-    xobj.onreadystatechange = function () {
-      if (xobj.readyState == 4 && xobj.status == "200") {
-        // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
-        console.log(xobj);
-        callback(xobj.responseText);
+    xobj.open('GET', apiUrl, true); // Replace 'my_data' with the path to your file
+
+    xhr.onload = function () {
+      if (xhr.readyState === xhr.DONE) {
+          if (xhr.status === 200) {
+              console.log(xhr.response);
+              callback(xhr.responseText);
+          }
       }
     };
     xobj.send(null);
