--- a/_layouts/open-api2.html
+++ b/_layouts/open-api2.html
@@ -56,7 +56,7 @@
     xobj.open('GET', apiUrl, true); // Replace 'my_data' with the path to your file
     
     xobj.onreadystatechange = function () {
-      if (xobj.readyState == 4 && xobj.status == "200") {
+      if (xobj.readyState == 4) {
         // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
         console.log(xobj);
         callback(xobj.responseText);
